--- a/exercise04/solution/zottmonte/CMakeLists.txt
+++ b/exercise04/solution/zottmonte/CMakeLists.txt
@@ -5,5 +5,5 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
  
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(runTests montecarlo_par.cpp)
-target_link_libraries(runTests ${GTEST_LIBRARIES} pthread -fopenmp -lgmp -O3)
+add_executable(runTests montecarlo_test.cpp)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread -std=c++17 -Wall -fopenmp -lgmp -O3)
