Improvements to Montecarlo

--- a/exercise05/solution/montecarlo/CMakeLists.txt
+++ b/exercise05/solution/montecarlo/CMakeLists.txt
@@ -6,4 +6,4 @@ include_directories(${GTEST_INCLUDE_DIRS})
  
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(runTests montecarlo_test.cpp Montecarlo.h MontecarloTesting.cpp)
-target_link_libraries(runTests ${GTEST_LIBRARIES} pthread -std=c++17 -Wall -fopenmp -lgmp -O3)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread -std=c++17 -Wall -fopenmp -O3)
