--- a/exercise07/solution/CMakeLists.txt
+++ b/exercise07/solution/CMakeLists.txt
@@ -7,5 +7,5 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
  
 # Link runTests with what we want to test and the GTest and pthread library
-add_executable(runTests Stencil.cpp Stencil.h chrono_timer.h)
-target_link_libraries(runTests ${GTEST_LIBRARIES} pthread -fopenmp)
+add_executable(runTests Test.cpp Stencil.cpp Stencil.h chrono_timer.h)
+target_link_libraries(runTests ${GTEST_LIBRARIES} -fopenmp)
